--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -1,15 +1,17 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
- <title>Lista de Tarefas</title> 
+    <title>Lista de Tarefas</title> 
 </head> 
 <body> 
- <h1>Lista de Tarefas</h1> 
- <ul> 
- <% tarefas.forEach(tarefa => { %> <li><%= tarefa.title %></li> <% }); %> </ul> 
-<form action="/tarefas" method="POST"> 
-<input type="text" name="title" placeholder="Nova Tarefa"> 
- <button type="submit">Adicionar</button> 
- </form> 
+    <h1>Lista de Tarefas</h1> 
+    <ul> 
+        <% tarefas.forEach(tarefa => { %> <li><%= tarefa.title %></li> <% }); %>
+     </ul> 
+     <form action="/tarefas" method="POST"> 
+        <input type="text" name="title" placeholder="Nova Tarefa"> 
+        <button type="submit">Adicionar</button> 
+    </form> 
 </body> 
 </html>
+
